<resources>
    <string name="app_name">Osaka Shopping</string>
    <string name="the_largest_shopping_experience">The Largest Shopping Experience</string>
    <string name="osaka_shopping">Osaka Shopping</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="feedback">FeedBack</string>
    <string name="profile">Profile</string>
    <string name="pg_name1">Home</string>
    <string name="search">Search</string>
    <string name="notificationMsg">No notification received!</string>
    <string name="profileName">Kamal Seriwardana</string>
    <string name="profile_login">Login</string>
    <string name="my_profile">My Profile</string>
    <string name="delivery">My Delivery Addresses</string>
    <string name="logout">Logout</string>
    <string name="userName">Kamal1990</string>
    <string name="email_profile">kamalsiri90@gmail.com</string>
    <string name="phone_profile">077-5812347</string>
    <string name="pass_profile">kamalsiri@0320</string>
    <string name="e_mail">E Mail</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="username">UserName</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="hello_there_welcome_back">Hello There, Welcome Back</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="forget_profile">Forget Password</string>
    <string name="forget_msg">Login Your New Password</string>
    <string name="btn_changePass">Change Password</string>
    <string name="forget_userName">User Name</string>
    <string name="forget_gmail">Gmail</string>
    <string name="forget_pass">Password</string>
    <string name="pay_methods">My Payment Methods</string>
    <string name="manage_address">Manage Address</string>
    <string name="new_addresses">Add new addresses</string>
    <string name="add_new_addresses">Add new addresses</string>
    <string name="province_region">Province/Region</string>
    <string name="city">City</string>
    <string name="place_address">Place Address</string>
    <string name="save">Save</string>
    <string name="select_billing_addresses">Select Billing Addresses</string>
    <string name="add_address">+ Add Address</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="payment_method">+ Add Payment Method</string>
</resources>
