<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"/>

    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notifications_black_24dp"/>

    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        android:icon="@drawable/ic_comment_black_24dp"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_black_24dp"/>

</menu>