<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/white">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        app:menu="@menu/menu_navigation"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="#fece2f"
            android:padding="0dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="171dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/profile_img" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="120dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/bangers"
                android:text="@string/profileName"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:padding="10dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/profile_login"
                android:background="@drawable/shape_stroke"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:drawableEnd="@drawable/ic_right_black_24dp"
                android:paddingStart="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:padding="10dp">
            <Button
                android:id="@+id/btn_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/shape_stroke"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableEnd="@drawable/ic_right_black_24dp"
                android:paddingStart="5dp"
                android:text="@string/my_profile"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:padding="10dp">
            <Button
                android:id="@+id/payment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/shape_stroke"
                android:drawableStart="@drawable/ic_power_settings_new_black_24dp"
                android:drawableEnd="@drawable/ic_right_black_24dp"
                android:paddingStart="5dp"
                android:text="@string/pay_methods"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:padding="10dp">
            <Button
                android:id="@+id/delivery_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/shape_stroke"
                android:drawableStart="@drawable/ic_airport_shuttle_black_24dp"
                android:drawableEnd="@drawable/ic_right_black_24dp"
                android:paddingStart="5dp"
                android:text="@string/delivery"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:padding="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/shape_stroke"
                android:drawableStart="@drawable/ic_power_settings_new_black_24dp"
                android:drawableEnd="@drawable/ic_right_black_24dp"
                android:paddingStart="5dp"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>